Fixed extra spacing issue

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,10 +3,10 @@ html{
   overflow-x: hidden;
   box-sizing: border-box;
   // Avoid scrollbar "jump": http://css-tricks.com/elegant-fix-jumping-scrollbar-issue/
-  margin-left: calc(100vw - 100%);
+  // margin-left: calc(100vw - 100%);
 }
 
-body{
+body{ 
   font-family:$main-font;
   color:$corona-brown;
   font-size:30px;
